syntax = "proto3";

package protobuf;
option go_package="protobuf";

option java_multiple_files = true;
option java_package = "com.herdius.proto";
option java_outer_classname = "HerdiusProto";

// import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// option (gogoproto.equal_all) = true;
// option (gogoproto.goproto_stringer_all) = false;
// option (gogoproto.gostring_all) = true;
// option (gogoproto.marshaler_all) = true;
// option (gogoproto.sizer_all) = true;
// option (gogoproto.stringer_all) = true;
// option (gogoproto.unmarshaler_all) = true;
// option (gogoproto.verbose_equal_all) = true;

message Timestamp {
    int64 seconds                   = 1;
    int64 nanos                     = 2;
}

message BlockHeightRequest{
    int64 block_height                  = 1;
}

message BlockResponse{
    int64 block_height                  = 1;
    // Time of block intialization
    Timestamp time                  = 2;
    int32 transactions              = 3;

    // Supervisor herdius token address who created the block
    string supervisor_address       = 4;
    bytes state_root                 = 5;
}

message AccountRequest {
  string address = 1;
}

message AccountResponse {
  string address = 1;
  uint64 nonce = 2;
  uint64 balance = 3;
  string storage_root = 4;
}

message Asset {
  string Message = 1;
  string Network = 2;
  uint64 Value = 3;
  uint64 Fee = 4;
  uint64 Nonce = 5;
}

message Transaction {
  bytes senderpubkey = 1;
  bytes signature = 2;
  string recaddress = 3;
  bool status = 4;
  Asset asset = 5;
}

message TransactionRequest {
  Transaction Tx = 1;
}

message TransactionResponse {
  string tx_id = 1;
  int64 pending = 2;
  int64 queued = 3;
  string status = 4;
}
